--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <h2>{{ group.name }}</h2>
     <ul>
         {% for article in group.items %}
-            <li>
-                <b><a href="{{ article.link }}">{{ article.title }}</a></b>
-                <ul>
-                    <li>{{ article.description }}</li>
-                </ul>
-            </li>
+        {% assign description = article.description | downcase %}
+            {% if description contains 'benefits' or description contains 'assistance' or description contains 'ebt' or description contains 'qualify' or description contains 'wic' or description contains 'stamps' %}
+                <li>
+                    <b><a href="{{ article.link }}">{{ article.title }}</a></b>
+                    <ul>
+                        <li>{{ article.description }}</li>
+                    </ul>
+                </li>
+            {% endif %}
         {% endfor %}
     </ul>
 {% endfor %}
