--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ permalink: /
 
 {% for group in grouped_articles %}
     <h2>{{ group.name }}</h2>
+    {% if group.items.size > 0 %}
     <ul>
         {% for article in group.items %}
         {% assign description = article.description | downcase %}
@@ -22,5 +23,8 @@ permalink: /
             {% endif %}
         {% endfor %}
     </ul>
+    {% else %}
+        <p>No articles found for this date.</p>
+    {% endif %}
 {% endfor %}
 
